# DISTILL

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DISCOVERY.md  IMPLEMENTATION.md  PLAN.md  README.md  package-lock.json  package.json  schema.sql  tsconfig.json
apps/distill-desktop/: AGENTS.md  Cargo.toml  README.md  build.rs
apps/distill-desktop/docs/: README.md
apps/distill-desktop/docs/plans/: parity-gap-map.md
apps/distill-desktop/docs/roadmap/: rebuild-roadmap.md
apps/distill-desktop/docs/testing/: parity-acceptance-matrix.md
apps/distill-desktop/scripts/: build-linux.sh  build-macos.sh
apps/distill-desktop/src/: app.rs  controller.rs  main.rs  view_models.rs
apps/distill-desktop/src/compat/: electron.rs  mod.rs
apps/distill-desktop/src/config/: mod.rs
apps/distill-desktop/src/data/: db.rs  logs.rs  mod.rs  sessions.rs  sql_guard.rs
apps/distill-desktop/src/storage/: connection.rs  migrations.rs  mod.rs  paths.rs  schema.rs
apps/distill-desktop/ui/: components.slint  db_pane.slint  logs_pane.slint  sessions_pane.slint  shell.slint
docs/: README.md
docs/gaps/: current-state-gap-register.md
docs/governance/: spec-governance.md
docs/roadmap/: spec-alignment-plan.md
docs/specs/: activity-and-ops.md  architecture.md  connectors.md  data-model.md  ingest-pipeline.md  search-curation-export.md
docs/testing/: contract-test-matrix.md
src/cli/: doctor.ts  export.ts  import.ts
src/connectors/: index.ts  types.ts
src/distill/: curation.ts  db.ts  db_inspector.ts  doctor.ts  export.ts  fs.ts  import.ts  jobs.ts  (+7 more)
static/: index.html
(+45 files in other folders)
