[package]
name = "distill-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.1", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "renderer-software", "compat-1-2", "accessibility"] }

[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
tempfile = "3.26.0"
